create new gradebook

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
   background-image: url(https://media.istockphoto.com/id/172413295/photo/an-up-close-picture-of-report-card-grades.jpg?s=612x612&w=0&k=20&c=d95S74oUPLZA98yn6QKG0-6OEbgAqgroKzQWH5GxwKA=);
   background-position: center;
@@ -11,7 +8,7 @@
 
 @media (max-width: 768px) {
   .App {
-    background-size: contain; /* Slika će biti prikazana u cijelosti, bez iskrivljavanja */
+    background-size: contain;
   }
 }
 
